<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity"
    tools:ignore="DuplicateIds"

    >

    <TextView
        android:id="@+id/textView_passsword_CreateActivity"
        android:layout_width="140dp"
        android:layout_height="27dp"
        android:text="@string/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_EmailAddress_CreateActivity"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/textView_alreadyaccount_CreateActivity"
        android:layout_width="382dp"
        android:layout_height="26dp"

        android:text="@string/already_have_a_an_account_sign_in"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <TextView
        android:id="@+id/textView_emailassress_CreateActivity"
        android:layout_width="118dp"
        android:layout_height="27dp"
        android:layout_marginTop="40dp"
        android:text="@string/email_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_alreadyaccount_CreateActivity" />

    <EditText
        android:id="@+id/editText_EmailAddress_CreateActivity"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/textview"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_emailassress_CreateActivity"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="Autofill" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edittext_states"
        android:padding="5dip"
        android:text="hello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="339dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/rounded_edittext_states"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_passsword_CreateActivity"
        app:layout_constraintVertical_bias="0.025"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView_confirmpaswword_CreateActivity"
        android:layout_width="123dp"
        android:layout_height="34dp"
        android:layout_marginTop="21dp"
        android:text="@string/confirm_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="347dp"
        android:layout_height="50dp"
        android:background="@drawable/editviewshape"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_confirmpaswword_CreateActivity"
        app:layout_constraintVertical_bias="0.044"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <RadioButton
        android:id="@+id/radioButton_remember_CreateActivity"
        android:layout_width="285dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:autoSizeTextType="none"
        android:text="@string/remember_me_next_time"
        android:textColor="#0C154A"
        android:textIsSelectable="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_bycreate_createActivity"
        android:layout_width="321dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/by_creating_your_account_you_accept_the_cgu_and_the_conditions_of_use"
        android:textColor="#4C2D8F"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton_remember_CreateActivity"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_next_create_activity"
        android:layout_width="336dp"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"
        android:background="@color/purple_200"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_bycreate_createActivity"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>